--- a/sketches/IrrigationApp/index.html
+++ b/sketches/IrrigationApp/index.html
@@ -72,6 +72,17 @@
         <select name="Duration" id="dur">
     <option value="5">5</option>
     <option value="10">10</option>
+    <option value="30">30</option>
+    <option value="60">1 Hour</option>
+    <option value="120">2 Hours</option>
+    <option value="180">3 Hours</option>
+    <option value="240">4 Hours</option>
+    <option value="300">5 Hours</option>
+    <option value="360">6 Hours</option>
+    <option value="420">7 Hours</option>
+    <option value="480">8 Hours</option>
+    <option value="540">9 Hours</option>
+    <option value="600">10 Hours</option>
  </select>
 
         <div class="container">
