--- a/sketches/IrrigationApp/index.html
+++ b/sketches/IrrigationApp/index.html
@@ -16,7 +16,7 @@
     <div class="form-container">
         <form>
             <div id="form1">
-                <div class="form-field">
+                <div class="form-header">
                     <label>
                     <p class="align-left" id>Orchard 1</p>
                         
@@ -27,7 +27,7 @@
                 </div>
 
 
-                <div class="form-field1">
+                <div class="form-body">
 
                     <div class="sub-container">
                         <label>
