--- a/sketches/Wellkeeper/index.html
+++ b/sketches/Wellkeeper/index.html
@@ -25,9 +25,6 @@
                     <label>
                         <p class="align-left"><span id="orchardID"></span>Water Sources</span></p>
                         
-                    <p class="align-right" id="battery">Battery:
-                    <span class="battery-box" id="batteryStatus"> LOW </span> </p>  
-
                     </p>
                      </label>
                 </div>
@@ -37,7 +34,7 @@
 
                     <div class="sub-container">
                         <label><div class="align-left" id="tankID">Tank Borehole1</div>
-                        <div class="align-right" id="deviceID">Particle 1</div></label>
+                        <div class="align-right" id="deviceID">Particle 2</div></label>
                         <span>
                             
                             <span class="text-box" id="statusText">Status</span>
@@ -49,10 +46,11 @@
                         <span class="text-box" id="battery">Battery</span>
                         <span class="batterySensor-box" id="batterySensor"> - </span>
                         <br></br>
-                        <span class="text-box" id="alarm">Alarm</span>
-                        <span class="alarmStatus-box" id="alarmStatus"> - </span>
+                        <!--
+<span class="text-box" id="alarm">Alarm</span>
+<span class="alarmStatus-box" id="alarmStatus"> - </span>-->
                         <br></br>
-                        <div><button type="button" id="activate-button" value=0 disabled> Connecting... </div>
+                        <!-- *leave out for now....*                  <div><button type="button" id="activate-button" value=0 disabled> Connecting... </div>-->
 
                         </span>
                     </div>
